--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Verdora Resort</title>
+  <!-- Preconnect fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+
+  <!-- Optimized Google Fonts (only weights used + swap) -->
+  <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="/images/banner.avif" type="image/avif">
+
 </head>
 
 <body>
