--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     window.addEventListener('DOMContentLoaded', () => {
       const script = document.createElement('script');
       script.type = 'module';
-      script.src = '/src/main.jsx';
+      script.src = '../src/main.jsx';
       script.defer = true; 
       document.body.appendChild(script);
     });
