--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="description"
     content="Verdora Resort – Luxury stays, comfort, and nature. Book your perfect getaway at Verdora Resort today." />
 
-  <link rel="icon" href="/vite.svg" type="image/svg+xml" />
-
+ <link rel="icon" href="/images/logo.png" type="image/png" />
+  <link rel="shortcut icon" href="/images/logo.png" type="image/png" />
   <!-- Preconnect -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
